--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Copy the root-level requirements.txt
+COPY ./requirements.txt /app/requirements.txt
+
+# Copy the entire backend folder to /app
 COPY ./backend /app
 
 RUN pip install --upgrade pip
