--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
+    "react-router-dom": "^6.0.0",
     "axios": "^0.27.2"
   },
   "devDependencies": {
