--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.0.0",
     "react-scripts": "^5.0.1",
     "react-router-dom": "^6.0.0",
-    "axios": "^0.27.2"
+    "axios": "^0.27.2",
+    "recharts": "^2.1.10"
   },
   "devDependencies": {
     "dotenv": "^16.0.0"
